syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "common.proto";

package Akka.Pathfinder;
option csharp_namespace = "Akka.Pathfinder.Grpc";
 
service PathService {
  rpc FindPath (stream FindPathRequest) returns (stream FindPathResponse);
  rpc GetPath(GetPathRequest) returns (GetPathResponse);
  rpc Delete(DeletePathfinderRequest) returns (DeletePathfinderResponse);
}

message FindPathRequest {
    string pathfinder_id = 1;
    int32 source_point_id = 2;
    int32 target_point_id = 3;
    Direction direction = 4;
    google.protobuf.Duration duration = 5;
}

message FindPathResponse{
    bool success = 1;
    string error_message = 2;
    string path_id = 3;
    int32 path_cost = 4;
    string pathfinder_id = 5;
}

message GetPathRequest{
    string path_id = 1;
    string pathfinder_id = 2;
}

message GetPathResponse{
    bool success = 1;
    string error_message = 2;
    repeated Point path = 3;
}

message DeletePathfinderRequest {
    string pathfinder_id = 1;
}

message DeletePathfinderResponse {
    bool success = 1;
    string error_message = 2;
}